Setting up the headline section
-Downloaded the image for the headline section.
-Write the contend of this section.
-Add the styles for this features on the css file.

--- a/style.css
+++ b/style.css
@@ -36,3 +36,52 @@
   top: 19px;
   background: #C4C4C4;
 }
+h1 {
+  position: absolute;
+  width: 220px;
+  height: 100px;
+  left: 16px;
+  top: 104px; 
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 100%;
+  color: #1A2236;
+}
+h5 {
+  position: absolute;
+  width: 288px;
+  height: 126px;
+  left: 16px;
+  top: 224px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: -0.01em;
+  color: #1A2236;    
+}
+h6 {
+  position: absolute;
+  width: 203.68px;
+  height: 26.47px;
+  left: 58px;
+  top: 402px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #FFFFFF;    
+}
+.collaboration_buttom2{
+  position: absolute;
+  width: 288px;
+  height: 50px;
+  left: 16px;
+  top: 390px;
+  background: #1A2236;
+}
