--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 
 h1 {
   margin: 30px 84px 10px 16px;
-  font-family: 'playfair display';
+  font-family: 'Playfair Display', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 50px;
@@ -36,7 +36,7 @@ h1 {
 
 p {
   margin: 10px 16px 24px 16px;
-  font-family: 'poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -48,7 +48,7 @@ p {
 h6 {
   margin: 16px;
   padding: 12px;
-  font-family: 'poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
