--- a/style.css
+++ b/style.css
@@ -45,7 +45,9 @@ p {
   color: #1a2236;
 }
 
-h6 {
+button {
+  height: 50px;
+  width: 90%;
   margin: 16px;
   padding: 12px;
   font-family: 'Poppins', sans-serif;
@@ -64,10 +66,6 @@ h6 {
 }
 
 .bottomheader {
+  width: 100%;
   margin-top: 16px;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
 }
