--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
   color: #1a2236;
 }
 
-button {
+#headline-button {
   cursor: pointer;
   height: 50px;
   width: 90%;
@@ -59,11 +59,10 @@ button {
   text-align: center;
   color: #fff;
   background-color: #1a2236;
-  border-radius: 15px;
   box-shadow: 0 2px #999;
 }
 
-button:hover {
+#headline-button:hover {
   background-color: #fff;
   color: #1a2236;
 }
@@ -82,4 +81,106 @@ button:active {
 .bottomheader {
   width: 100%;
   margin-top: 16px;
+}
+
+.works{
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(7,auto);
+}
+
+.projecttitle{
+  margin: 39.9px 123px 32px 16px;
+  font-family: 'Playfair Display', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 50px;
+  line-height: 100%;
+  color: #1a2236;
+}
+
+.projectdescription img {
+  width: 100%;
+  height: auto;
+}
+
+h3 {
+  margin: 20px 36px 8px 20px;
+  font-family: 'Poppins' sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 80%;
+  color: #fff;
+}
+
+li {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10.3334px;
+  line-height: 80%;
+  text-align: center;
+  color: #1a2236;
+  background-color: #98dede;
+  padding: 6px 10px 6px 10px;
+}
+
+#html {
+  height: 20px;
+  width: 69px;
+}
+
+#ruby {
+  height: 20px;
+  width: 97px;
+}
+
+#js {
+  height: 20px;
+  width: 87px;
+}
+
+.languages{
+  display: flex;
+  column-gap: 14px;
+  margin: 8px 50px 10px 20px;
+}
+
+#buttonproject {
+  display: flex;
+  cursor: pointer;
+  justify-content: space-between;
+  height: 44px;
+  width: 178px;
+  padding: 10px;
+  margin: 10px 122px 20px 20px;
+  border: 2px solid #fff;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #FFFFFF;
+  border-radius: 2%;
+  box-shadow:0 0px;
+  background-color: #1a2236;
+}
+
+#buttonproject img {
+  height: 15.35px;
+  width: 20.57px;
+  padding-top: 4px ;
+}
+
+#buttonproject:hover {
+  background-color: #fff;
+  color: #1a2236;
+}
+
+.projectdescription {
+  display: flex;
+  flex-direction: column;
+  background-color: #1a2236;
 }
