--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
   color: #1a2236;
 }
 
-#headline-button {
+.headline-button {
   cursor: pointer;
   height: 50px;
   width: 90%;
@@ -62,7 +62,7 @@ p {
   box-shadow: 0 2px #999;
 }
 
-#headline-button:hover {
+.headline-button:hover {
   background-color: #fff;
   color: #1a2236;
 }
@@ -114,7 +114,7 @@ h3 {
   color: #fff;
 }
 
-li {
+.html, .ruby, .js {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 300;
@@ -183,4 +183,80 @@ li {
   display: flex;
   flex-direction: column;
   background-color: #1a2236;
+}
+
+.about-button {
+  display: flex;
+  justify-content: center;
+  column-gap: 20px;
+  cursor: pointer;
+  height: 50px;
+  width: 90%;
+  margin: 16px;
+  padding: 13px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 25px;
+  text-align: center;
+  color: #fff;
+  background-color: #1a2236;
+  box-shadow: 0 2px #999;
+}
+
+.tech {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-template-rows: repeat(3, 289px);
+  justify-content:center;
+  row-gap: 16px;
+  margin: 16px;
+}
+
+.languages1 {
+  background-color: #1c528a;
+  background-image: url(img/languages1.png);
+  background-position: bottom right;
+  background-repeat: no-repeat;
+}
+
+.frameworks {
+  background-color: #e2505c;
+  background-image: url(img/frameworks.png);
+  background-position: bottom right;
+  background-repeat: no-repeat;
+}
+
+.skills {
+  background-color: #febf52;
+  background-image: url(img/skills.png);
+  background-position: bottom right;
+  background-repeat: no-repeat;
+}
+
+.position {
+  margin-top: 21px;
+  margin-left: 50px;
+}
+
+h4 {
+  margin-top: 50px;
+  margin-left: 50px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 30px;
+  color: #fff;
+}
+
+li {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: -0.0525em;
+  color: #fff;
 }
