Add Form labels & input, give some css to these

--- a/style.css
+++ b/style.css
@@ -280,3 +280,9 @@ h4 {
   letter-spacing: -0.0525em;
   color: #fff;
 }
+
+/* Contact-form Section css */
+form input{
+  width: 288px;
+  height: 50px;
+}
