--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
   padding: 0;
 }
 
+/* NavBar Section css */
+
 .toolbar {
   width: 111px;
   height: 74px;
@@ -82,6 +84,8 @@ button:active {
   width: 100%;
   margin-top: 16px;
 }
+
+/* Works Section css */
 
 .works {
   display: grid;
@@ -282,12 +286,15 @@ h4 {
 }
 
 /* Contact-form Section css */
-form {
-  background-color: #f9f9fa;
+
+.contactform {
+  margin-top: 34px;
 }
 
-form ul {
-  margin-left: 53px;
+.submitform {
+  background-color: #f9f9fa;
+  margin-left: 18px;
+  margin-right: 14px;
   list-style-type: none;
   display: flex;
   flex-direction: column;
@@ -296,19 +303,92 @@ form ul {
 
 label {
   position: absolute;
-  margin-left: 4px;
+  margin-left: 16px;
   margin-top: 4px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
 }
 
-input{
-  width: 288px;
+input {
+  border: 1px solid #dfdfe0;
+  border-radius: 4px;
+  width: 100%;
   height: 50px;
-  padding-top: 15px;
-  padding-left: 4px
+  padding-top: 5px;
+  padding-left: 16px;
+}
+
+input:hover {
+  border: 1px solid #1a2236;
 }
 
 textarea {
-  width: 288px;
+  padding: 10px;
+  border: 1px solid #dfdfe0;
+  border-radius: 4px;
+  width: 100%;
   height: 112px;
-  padding-top: 10px;
+}
+
+textarea:hover {
+  border: 1px solid #1a2236;
+}
+
+.contact-button {
+  cursor: pointer;
+  height: 50px;
+  width: 100%;
+  padding: 12px;
+  margin-top: 10px;
+  margin-bottom: 64px;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  color: #fff;
+  background-color: #1a2236;
+  box-shadow: 0 2px #999;
+}
+
+.contact-button:hover {
+  background-color: #fff;
+  color: #1a2236;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  row-gap: 31px;
+  background-color: #1a2236;
+  padding: 32px 16px 40px 16px;
+}
+
+.get-resume {
+  background-color: #1a2236;
+  cursor: pointer;
+  color: #98dede;
+  border-style: none;
+  display: flex;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  column-gap: 16px;
+}
+
+.get-resume:hover {
+  background-color: #e5e5e5;
+  color: #1a2236;
+}
+
+.social-network {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
 }
