--- a/style.css
+++ b/style.css
@@ -384,6 +384,8 @@ textarea:hover {
   font-size: 16px;
   line-height: 24px;
   column-gap: 16px;
+  width: 168px;
+  height: 24px;
 }
 
 .get-resume:hover {
