--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
 * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-/* NavBar Section css */
+/* NavBar Section CSS */
 
 .toolbar {
   width: 111px;
@@ -26,7 +24,48 @@
   justify-content: space-between;
 }
 
-/* Headline Section css*/
+.navbutton {
+  cursor: pointer;
+  border: none;
+  background-color: #fff;
+  color: #1a2236;
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+/*NavBar Desktop Section CSS*/
+
+@media (min-width: 600px) {
+  .toolbar {
+    display: none;
+  }
+
+  .rectangle {
+    display: none;
+  }
+
+  .navbar {
+    display: block;
+  }
+
+  .navbar.desk {
+    display: flex;
+    justify-content: center;
+    column-gap: 50px;
+    padding: 38px;
+    list-style: none;
+  }
+
+  .navbutton:hover {
+    text-decoration: underline;
+    color: #1a2236;
+  }
+}
+
+/* Headline Section CSS*/
 
 h1 {
   margin-top: 14px;
@@ -85,10 +124,32 @@ button:active {
 
 .bottomheader {
   width: 100%;
-  margin-top: 16px;
+  margin-top: 32px;
 }
 
-/* Works Section css */
+.sideheader {
+  display: none;
+}
+
+/* Headline Desktop Section CSS*/
+
+@media (min-width: 600px) {
+  .headline {
+    display: grid;
+  }
+
+  .bottomheader {
+    display: none;
+  }
+
+  .sideheader {
+    display: block;
+    width: 100%;
+    height: auto;
+  }
+}
+
+/* Works Section CSS */
 
 .works {
   display: grid;
@@ -97,7 +158,7 @@ button:active {
 }
 
 .projecttitle {
-  margin: 39.9px 123px 32px 16px;
+  margin: 24px 123px 32px 16px;
   font-family: "Playfair Display", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -195,7 +256,7 @@ h3 {
   background-color: #1a2236;
 }
 
-/* Aboutme Section css */
+/* Aboutme Section CSS */
 
 .about-button {
   display: flex;
@@ -203,8 +264,9 @@ h3 {
   column-gap: 20px;
   cursor: pointer;
   height: 50px;
-  width: 90%;
-  margin: 16px;
+  width: 100%;
+  margin-top: 16px;
+  margin-bottom: 16px;
   padding: 13px;
   font-family: "Poppins", sans-serif;
   font-style: normal;
@@ -260,7 +322,7 @@ h3 {
 }
 
 h5 {
-  margin: 30px 84px 10px 16px;
+  margin-top: 40px;
   font-family: "Playfair Display", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -290,7 +352,13 @@ h4 {
   color: #fff;
 }
 
-/* Contact-form Section css */
+/* Contact-form Section CSS */
+
+.toolbar2 {
+  width: 111px;
+  height: 74px;
+  margin-left: -16px;
+}
 
 .contactform {
   margin-top: 34px;
@@ -365,7 +433,7 @@ textarea:hover {
   color: #1a2236;
 }
 
-/* Footer css */
+/* Footer CSS */
 
 .links {
   display: flex;
