--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ button:active {
     justify-content: center;
     padding: 120px;
     margin: none;
+    font-size: 110px;
     background-image: url(img/imagedots.svg);
     background-position: bottom right;
     background-repeat: no-repeat;
@@ -166,6 +167,10 @@ button:active {
   .headline-button {
     height: 70px;
     width: 254px;
+  }
+
+  h1 {
+    font-size: 110px;
   }
 
   p {
@@ -218,21 +223,7 @@ h3 {
   color: #1a2236;
   background-color: #98dede;
   padding: 6px 10px 6px 10px;
-}
-
-.html {
-  height: 20px;
-  width: 69px;
-}
-
-.ruby {
-  height: 20px;
-  width: 97px;
-}
-
-.js {
-  height: 20px;
-  width: 87px;
+  margin: 1px;
 }
 
 .languages {
@@ -240,6 +231,7 @@ h3 {
   column-gap: 14px;
   margin: 8px 50px 10px 20px;
   list-style: none;
+  flex-wrap: wrap;
 }
 
 .buttonproject {
@@ -302,18 +294,6 @@ h3 {
   h3 {
     font-weight: 600;
     font-size: 30px;
-  }
-
-  .html {
-    width: 132px;
-  }
-
-  .ruby {
-    width: 169px;
-  }
-
-  .js {
-    width: 144px;
   }
 
   .html,
@@ -391,7 +371,7 @@ h3 {
     display: flex;
     justify-content: flex-end;
     background-image: url(img/project3.png);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
@@ -429,7 +409,7 @@ h3 {
     display: flex;
     justify-content: flex-end;
     background-image: url(img/project5.png);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
