Added links to the navigation bar
-Added id to the sections to attached the links.
-Created the style for this links.
-Added the links to the navbar desk.

--- a/style.css
+++ b/style.css
@@ -63,6 +63,14 @@
     list-style: none;
   }
 
+  a:link {
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: #1a2236;
+  }
+
   .navbutton:hover {
     text-decoration: underline;
     color: #1a2236;
