Fixed linter issues.
-Deleted the button feature of this links.
-Added the correct style for this.

--- a/style.css
+++ b/style.css
@@ -71,9 +71,15 @@
     color: #1a2236;
   }
 
-  .navbutton:hover {
+  a:hover {
     text-decoration: underline;
     color: #1a2236;
+  }
+
+  a:active {
+    background-color: #fff;
+    box-shadow: 0 2px #999;
+    transform: translateY(5px);
   }
 }
 
