--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ p {
   text-align: center;
   color: #fff;
   background-color: #1a2236;
-  box-shadow: 0 2px #fff;
+  box-shadow: 0 2px #1c528a;
 }
 
 .headline-button:hover {
