--- a/style.css
+++ b/style.css
@@ -546,7 +546,7 @@ h2 {
   text-align: center;
   color: #fff;
   background-color: #1a2236;
-  box-shadow: 0 2px #999;
+  box-shadow: 0 2px #1c528a;
 }
 
 .about-button:hover {
