--- a/style.css
+++ b/style.css
@@ -745,7 +745,7 @@ textarea:hover {
   text-align: center;
   color: #fff;
   background-color: #1a2236;
-  box-shadow: 0 2px #999;
+  box-shadow: 0 2px #1c528a;
 }
 
 .contact-button:hover {
