--- a/style.css
+++ b/style.css
@@ -30,9 +30,9 @@
 
 #menu {
   position: fixed;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
+  height: 100%;
+  width: 100%;
+  display: none;
   flex-direction: column;
   background-color: #fff;
   background-image: url(img/backgroundmenu1.png), url(img/backgroundmenu2.png);
