--- a/style.css
+++ b/style.css
@@ -560,6 +560,111 @@ h2 {
   }
 }
 
+/*Popup-window Section CSS*/
+
+.popup-window {
+  display: none;
+  flex-direction: column;
+  margin: 15px;
+}
+
+.popup-window h2 {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 80%;
+  color: #1a2236;
+}
+
+.langstyle {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 10.3334px;
+  line-height: 80%;
+  text-align: center;
+  color: #1a2236;
+  background-color: #fff;
+  border: 1px solid #1a2236;
+  padding: 6px 10px 6px 10px;
+  margin: 1px;
+}
+
+.images {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+.showimg {
+  position: relative;
+  width: 100%;
+}
+
+.image {
+  width: 100%;
+  height: 100%;
+}
+
+.prev,
+.next {
+  position: absolute;
+  top: 50%;
+}
+
+.prev {
+  left: 2%;
+}
+
+.next {
+  right: 2%;
+}
+
+.miniatures {
+  display: flex;
+  width: 100%;
+}
+
+.miniatures img {
+  max-width: 25%;
+}
+
+.popup-window p {
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+  color: #1A2236;
+  margin: 12px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.button-pop {
+  display: flex;
+  cursor: pointer;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 246px;
+  height: 51px;
+  border: 1px solid #1A2236;
+  background-color: #fff;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  text-align: center;
+  margin: 30px;
+}
+
 /* Aboutme Section CSS */
 
 .aboutheadline {
